Fix z-index problems

--- a/src/strength.css
+++ b/src/strength.css
@@ -31,6 +31,8 @@
 /* strength and show hide in a wrapper (places all the chrome inside the input box) */
 
 .strength_wrapper input {
+  position: relative;
+  z-index: 1;
   margin: 0 !important;
   padding-left: 35px !important;
   background: transparent !important;
@@ -45,7 +47,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: -1;
+  z-index: 0;
   border-radius: 3px;
   background-color: #fff;
 }
@@ -106,11 +108,11 @@
   position: absolute;
   right: 0.5em;
   top: 50%;
+  z-index: 2;
   margin-top: -0.5em;
   font-size: 12px;
   line-height: 1;
   text-transform: uppercase;
-  color: #00b8ff;
   cursor: pointer;
 }
 @media screen and (max-width: 600px) {
